gcc/testsuite/gdc.test/runnable/imports/link14588a.d
module imports.link14588a;

void func(alias a)()
{
}

class A
{
    int i;

    void all()()
    {
        func!(i)();
    }
}
