gcc/testsuite/gdc.test/fail_compilation/fail14.d

class A(T)
{
    .A!(A) x;

}

void main()
{
	A!(int);
}
